outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-28_00-20-56/evaluations/problem_eval-6009237061864621714_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance using thresholds. New algorithm design: Similar to No.2, but also incorporate a threshold-based destination proximity check to balance node scoring.}
                                                                                                                                                                   ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance using thresholds. New algorithm design: Similar to No.2, but also incorporate a threshold-based destination proximity check to balance node scoring.}
                                                                                                                                                                   ^
SyntaxError: unmatched '}'
